inter-pod-comm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wget-pod
spec:
  containers:
  - image: busybox
    name: wget-pod
    args:
    - /bin/sh
    - -c
    # IP address of pod is *not* stable
    - 'wget 10.10.169.133:80'
  restartPolicy: Never
