multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
spec:
  containers:
  - image: nginx
    name: app
    ports:
    - containerPort: 80
  - image: curlimages/curl:7.86.0
    name: sidecar
    args:
    - /bin/sh
    - -c
    - 'while true; do curl -I localhost:80; sleep 5; done'
