nginx-deployment-w-secret-mount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deployment
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-deployment
  template:
    metadata:
      labels:
        app: nginx-deployment
    spec:
      containers:
      - image: nginx:1.17.0
        name: nginx
        volumeMounts:
        - name: secret-vol
          mountPath: /etc/secret
          readOnly: true
      volumes:
      - name: secret-vol
        secret:
          secretName: basic-auth-secret
