pod-taint.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-taint
  name: pod-taint
spec:
  containers:
  - image: nginx
    name: pod-taint
