echoserver-clusterip.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: echoserver
  name: echoserver
spec:
  containers:
  - image: k8s.gcr.io/echoserver:1.10
    name: echoserver
    ports:
    - containerPort: 8080
  dnsPolicy: ClusterFirst
  restartPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echoserver
  name: echoserver
spec:
  ports:
  - name: 5005-8080
    port: 5005
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoserver
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: get-echoserver
spec:
  containers:
  - image: busybox
    name: get-echoserver
    args:
    - /bin/sh
    - -c
    - 'wget echoserver.default.svc.cluster.local:5005'
  restartPolicy: Never
