svc-by-hostname.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dns-ns
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: dns-ns
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: echoserver
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: echoserver
  name: echoserver
  namespace: dns-ns
spec:
  containers:
  - image: k8s.gcr.io/echoserver:1.10
    name: echoserver
    ports:
    - containerPort: 8080
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: dns-ns
spec:
  containers:
  - image: busybox
    name: busybox
    command: ['sh', '-c', 'wget echoserver:8080']
  restartPolicy: OnFailure
