echoserver-ingress.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: echoserver
  name: echoserver
spec:
  containers:
  - image: k8s.gcr.io/echoserver:1.10
    name: echoserver
    ports:
    - containerPort: 8080
  dnsPolicy: ClusterFirst
  restartPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echoserver
  name: echoserver
spec:
  ports:
  - name: 5005-8080
    port: 5005
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoserver
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
spec:
  rules:
  - host: echoserver.com
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /echoserver/api
        pathType: Exact
