network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
  namespace: np-test
spec:
  podSelector:
    matchLabels:
      badgers: good
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              badgers: good
# run 1st pod with badgers: good label in np-test ns
# access 1st pod with 2nd pod in np-test ns with badgers: good label - works
# access 1st pod with 3rd pod in different namespace - doesn't work
# delete network policy - now it works
